Added comments and cutout simplified notebook for Mohiuddin Meeting

--- a/Presentation_Notebook.ipynb
+++ b/Presentation_Notebook.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Presentation_Notebook.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyME76uqbCgiuh+gH1/EeDko",
+      "authorship_tag": "ABX9TyPBwNnT6M5aN+N9wV2qz8yc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,12 +25,442 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "KeM2XzA5AOo3"
+        "id": "-oyzrgiaBcl_"
       },
       "source": [
-        ""
+        "**Imports**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "KeM2XzA5AOo3",
+        "outputId": "99bf6585-bc71-47c0-8c74-7e74f0380dd1"
+      },
+      "source": [
+        "import numpy as np # linear algebra\r\n",
+        "import pandas as pd # data processing, CSV file I/O (e.g. pd.read_csv)\r\n",
+        "import numpy as np\r\n",
+        "import re\r\n",
+        "import nltk\r\n",
+        "from nltk.corpus import stopwords\r\n",
+        "nltk.download('stopwords')\r\n",
+        "nltk.download('punkt')\r\n",
+        "from nltk.tokenize import word_tokenize\r\n",
+        "import pandas as pd\r\n",
+        "import tensorflow as tf\r\n",
+        "from tensorflow.keras.layers import Dense, Input, GRU, Dropout\r\n",
+        "from tensorflow.keras.optimizers import Adam\r\n",
+        "from tensorflow.keras.models import Model\r\n",
+        "from tensorflow.keras.callbacks import ModelCheckpoint\r\n",
+        "import tensorflow_hub as hub\r\n",
+        "import pickle\r\n",
+        "from sklearn.metrics import f1_score\r\n",
+        "from sklearn.metrics import accuracy_score\r\n",
+        "from keras.utils.np_utils import to_categorical  \r\n",
+        "import string\r\n",
+        "import requests"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[nltk_data] Downloading package stopwords to /root/nltk_data...\n",
+            "[nltk_data]   Unzipping corpora/stopwords.zip.\n",
+            "[nltk_data] Downloading package punkt to /root/nltk_data...\n",
+            "[nltk_data]   Unzipping tokenizers/punkt.zip.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Fh6QGos5AiMr",
+        "outputId": "5dbf8427-5335-430e-fba3-312836efad5b"
+      },
+      "source": [
+        "!wget --quiet https://raw.githubusercontent.com/tensorflow/models/master/official/nlp/bert/tokenization.py\r\n",
+        "!pip install sentencepiece\r\n",
+        "import tokenization"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Collecting sentencepiece\n",
+            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/14/67/e42bd1181472c95c8cda79305df848264f2a7f62740995a46945d9797b67/sentencepiece-0.1.95-cp36-cp36m-manylinux2014_x86_64.whl (1.2MB)\n",
+            "\u001b[K     |████████████████████████████████| 1.2MB 5.4MB/s \n",
+            "\u001b[?25hInstalling collected packages: sentencepiece\n",
+            "Successfully installed sentencepiece-0.1.95\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "iMqKy0SyBjNJ"
+      },
+      "source": [
+        "**BERT Encoder and Model**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "pXbg02vuAlFd"
+      },
+      "source": [
+        "def bert_encode(texts, tokenizer, max_len=512):\r\n",
+        "    all_tokens = []\r\n",
+        "    all_masks = []\r\n",
+        "    all_segments = []\r\n",
+        "    \r\n",
+        "    for text in texts:\r\n",
+        "        text = tokenizer.tokenize(text)\r\n",
+        "            \r\n",
+        "        text = text[:max_len-2]\r\n",
+        "        input_sequence = [\"[CLS]\"] + text + [\"[SEP]\"]\r\n",
+        "        pad_len = max_len - len(input_sequence)\r\n",
+        "        \r\n",
+        "        tokens = tokenizer.convert_tokens_to_ids(input_sequence)\r\n",
+        "        tokens += [0] * pad_len\r\n",
+        "        pad_masks = [1] * len(input_sequence) + [0] * pad_len\r\n",
+        "        segment_ids = [0] * max_len\r\n",
+        "        \r\n",
+        "        all_tokens.append(tokens)\r\n",
+        "        all_masks.append(pad_masks)\r\n",
+        "        all_segments.append(segment_ids)\r\n",
+        "    \r\n",
+        "    return np.array(all_tokens), np.array(all_masks), np.array(all_segments)"
+      ],
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qEVm4nD4AniY"
+      },
+      "source": [
+        "def build_model(bert_layer, max_len=512):\r\n",
+        "    input_word_ids = Input(shape=(max_len,), dtype=tf.int32, name=\"input_word_ids\")\r\n",
+        "    input_mask = Input(shape=(max_len,), dtype=tf.int32, name=\"input_mask\")\r\n",
+        "    segment_ids = Input(shape=(max_len,), dtype=tf.int32, name=\"segment_ids\")\r\n",
+        "\r\n",
+        "    pooled_output, sequence_output = bert_layer([input_word_ids, input_mask, segment_ids])\r\n",
+        "    clf_output = pooled_output\r\n",
+        "    out = Dense(100, activation='relu')(clf_output)\r\n",
+        "    out = Dense(100, activation='relu')(out)\r\n",
+        "    out = Dense(6, activation='softmax')(out)\r\n",
+        "    \r\n",
+        "    model = Model(inputs=[input_word_ids, input_mask, segment_ids], outputs=out)\r\n",
+        "    model.compile(Adam(lr=2e-6), loss='binary_crossentropy', metrics=['accuracy'])\r\n",
+        "    \r\n",
+        "    return model"
+      ],
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Fc7BN2yeAwR5",
+        "outputId": "3944b625-b9bd-4a0a-c57c-4f0f3e7813ce"
+      },
+      "source": [
+        "%%time\r\n",
+        "module_url = \"https://tfhub.dev/tensorflow/bert_en_uncased_L-24_H-1024_A-16/1\"\r\n",
+        "bert_layer = hub.KerasLayer(module_url, trainable=True)"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "CPU times: user 24.9 s, sys: 4.89 s, total: 29.7 s\n",
+            "Wall time: 33.5 s\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "eIhR2fNFBoa-"
+      },
+      "source": [
+        "**Getting Training and Testing Data**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "06imNvvPAq2V"
+      },
+      "source": [
+        "from google.colab import drive\r\n",
+        "drive.mount('/content/gdrive')"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "iZD96QG7AywZ"
+      },
+      "source": [
+        "with open('/content/gdrive/My Drive/iemocap/train/sentences.pkl', 'rb') as f:\r\n",
+        "    data = pickle.load(f)\r\n",
+        "with open('/content/gdrive/My Drive/iemocap/train/labels.pkl', 'rb') as f:\r\n",
+        "    labels = pickle.load(f)\r\n",
+        "with open('/content/gdrive/My Drive/iemocap/test/sentences.pkl', 'rb') as f:\r\n",
+        "    test_data = pickle.load(f)\r\n",
+        "with open('/content/gdrive/My Drive/iemocap/test/labels.pkl', 'rb') as f:\r\n",
+        "    test_labels = pickle.load(f)\r\n",
+        "with open('/content/gdrive/MyDrive/iemocap/train/conversation_length.pkl', 'rb') as f:\r\n",
+        "    train_convlen = pickle.load(f)\r\n",
+        "with open('/content/gdrive/MyDrive/iemocap/test/conversation_length.pkl', 'rb') as f:\r\n",
+        "    test_convlen = pickle.load(f)"
+      ],
+      "execution_count": 7,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "EyVxexRvBtEU"
+      },
+      "source": [
+        "**Preprocessing data to pass through BERT**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "EGctK_mKA2ke"
+      },
+      "source": [
+        "def preprocessing(data,labels):\r\n",
+        "  processed_data=[]\r\n",
+        "  processed_label=[]\r\n",
+        "  for i in range(0,len(data)):\r\n",
+        "    for j in range(0,len(data[i])):\r\n",
+        "      intermediate_data=[]\r\n",
+        "      intermediate_label=[]\r\n",
+        "      for k in range(0,len(data[i][j])):\r\n",
+        "        text=data[i][j][k]\r\n",
+        "        if text != '<eos>'and text!='<pad>':\r\n",
+        "          intermediate_data.append(text)\r\n",
+        "      processed_data.append(intermediate_data)\r\n",
+        "  for i in labels:\r\n",
+        "    for j in i:\r\n",
+        "      processed_label.append(j)\r\n",
+        "  return processed_data,processed_label"
+      ],
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Jb5nEzupA5wG"
+      },
+      "source": [
+        "processed_data,processed_label = preprocessing(data,labels)\r\n",
+        "test_processed_data,test_processed_label = preprocessing(test_data,test_labels)"
+      ],
+      "execution_count": 9,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-cMGuWTaA9_9"
+      },
+      "source": [
+        "for i in range(0,len(processed_data)):\r\n",
+        "  processed_data[i]= ' '.join(processed_data[i])\r\n",
+        "for i in range(0,len(test_processed_data)):\r\n",
+        "  test_processed_data[i]=' '.join(test_processed_data[i])"
+      ],
+      "execution_count": 10,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "UJNKIZr1BzJg"
+      },
+      "source": [
+        "**Passing to BERT**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Qw74KVe0A_6O"
+      },
+      "source": [
+        "processed_data=np.asarray(processed_data)\r\n",
+        "test_processed_data=np.asarray(test_processed_data)\r\n",
+        "Y=to_categorical(processed_label, num_classes=6)\r\n",
+        "test_Y=to_categorical(test_processed_label, num_classes=6)"
+      ],
+      "execution_count": 11,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "LMOLYsusBCtc"
+      },
+      "source": [
+        "vocab_file = bert_layer.resolved_object.vocab_file.asset_path.numpy()\r\n",
+        "do_lower_case = bert_layer.resolved_object.do_lower_case.numpy()\r\n",
+        "tokenizer = tokenization.FullTokenizer(vocab_file, do_lower_case)"
+      ],
+      "execution_count": 12,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "l3b8XFyFBEc0"
+      },
+      "source": [
+        "train_input = bert_encode(processed_data, tokenizer, max_len=160)\r\n",
+        "test_input = bert_encode(test_processed_data, tokenizer, max_len=160)\r\n",
+        "train_labels = Y\r\n",
+        "test_labels = test_Y"
+      ],
+      "execution_count": 13,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "CGWW_qvrBHHN",
+        "outputId": "3c48b744-0ef8-4145-be9c-1fb26289ac2f"
+      },
+      "source": [
+        "model = build_model(bert_layer, max_len=160)\r\n",
+        "model.summary()"
+      ],
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Model: \"model\"\n",
+            "__________________________________________________________________________________________________\n",
+            "Layer (type)                    Output Shape         Param #     Connected to                     \n",
+            "==================================================================================================\n",
+            "input_word_ids (InputLayer)     [(None, 160)]        0                                            \n",
+            "__________________________________________________________________________________________________\n",
+            "input_mask (InputLayer)         [(None, 160)]        0                                            \n",
+            "__________________________________________________________________________________________________\n",
+            "segment_ids (InputLayer)        [(None, 160)]        0                                            \n",
+            "__________________________________________________________________________________________________\n",
+            "keras_layer (KerasLayer)        [(None, 1024), (None 335141889   input_word_ids[0][0]             \n",
+            "                                                                 input_mask[0][0]                 \n",
+            "                                                                 segment_ids[0][0]                \n",
+            "__________________________________________________________________________________________________\n",
+            "dense (Dense)                   (None, 100)          102500      keras_layer[0][0]                \n",
+            "__________________________________________________________________________________________________\n",
+            "dense_1 (Dense)                 (None, 100)          10100       dense[0][0]                      \n",
+            "__________________________________________________________________________________________________\n",
+            "dense_2 (Dense)                 (None, 6)            606         dense_1[0][0]                    \n",
+            "==================================================================================================\n",
+            "Total params: 335,255,095\n",
+            "Trainable params: 335,255,094\n",
+            "Non-trainable params: 1\n",
+            "__________________________________________________________________________________________________\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "wBeQ1fjzB6yD"
+      },
+      "source": [
+        "**Train Accuracy**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "J8w3RboqBJLv",
+        "outputId": "51b55fa1-ac7a-419d-bd46-36be5fa7eed2"
+      },
+      "source": [
+        "train_history = model.fit(\r\n",
+        "    train_input, train_labels,\r\n",
+        "    epochs=6,\r\n",
+        "    batch_size=1\r\n",
+        ")\r\n",
+        "\r\n",
+        "model.save('model.h5')"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Epoch 1/6\n",
+            "  14/4699 [..............................] - ETA: 11:47:21 - loss: 0.8962 - accuracy: 0.1942"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "aLB5wcdlB3Ip"
+      },
+      "source": [
+        "**Test Accuracy**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "s6wEpl-hBLmz"
+      },
+      "source": [
+        "y_pred=model.predict(test_input, batch_size=1)\r\n",
+        "y_pred1=np.argmax(y_pred,axis=1)\r\n",
+        "test_processed_label=np.asarray(test_processed_label)\r\n",
+        "print(\"Accuracy : \" + str(accuracy_score(test_processed_label, y_pred1)))\r\n",
+        "print(\"Weighted F1-score : \" + str(f1_score(test_processed_label, y_pred1, average='weighted')))"
       ],
       "execution_count": null,
       "outputs": []
