--- a/ConceptNet_Features.ipynb
+++ b/ConceptNet_Features.ipynb
@@ -6,13 +6,14 @@
       "name": "ConceptNet_Features.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMKHEKLCHZLbYeYvOPOaDlw",
+      "authorship_tag": "ABX9TyPLP3ldOwjINiczc0PWBfUb",
       "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
       "display_name": "Python 3"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -32,7 +33,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "AeBNy2OjIs0j",
-        "outputId": "11160f14-57ab-4e91-8d1b-d55b8d062c96"
+        "outputId": "ebf4787c-946d-48d5-bade-bf6904a92c7a"
       },
       "source": [
         "import pickle\r\n",
@@ -44,15 +45,15 @@
         "import requests\r\n",
         "import re"
       ],
-      "execution_count": 21,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "[nltk_data] Downloading package punkt to /root/nltk_data...\n",
-            "[nltk_data]   Package punkt is already up-to-date!\n",
+            "[nltk_data]   Unzipping tokenizers/punkt.zip.\n",
             "[nltk_data] Downloading package stopwords to /root/nltk_data...\n",
-            "[nltk_data]   Package stopwords is already up-to-date!\n"
+            "[nltk_data]   Unzipping corpora/stopwords.zip.\n"
           ],
           "name": "stdout"
         }
@@ -65,13 +66,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ijlG0K3eIRuP",
-        "outputId": "46d91530-e973-4f70-ef9c-b00a0aa3b903"
+        "outputId": "83967346-9cfc-48ce-e6f4-a39a1b62f11d"
       },
       "source": [
         "from google.colab import drive\r\n",
         "drive.mount('/content/gdrive')"
       ],
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -97,7 +98,7 @@
         "with open('/content/gdrive/My Drive/iemocap/test/labels.pkl', 'rb') as f:\r\n",
         "    test_labels = pickle.load(f)"
       ],
-      "execution_count": 5,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -163,7 +164,7 @@
         "with open('test_processed_data.pkl', 'wb') as f:\r\n",
         "  pickle.dump(test_processed_data, f)\r\n"
       ],
-      "execution_count": 10,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -175,31 +176,8 @@
         "with open('processed_data.pkl', 'rb') as f:\r\n",
         "  new_data= pickle.load(f)"
       ],
-      "execution_count": 11,
+      "execution_count": 10,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "3m_H5sSC60UU",
-        "outputId": "20f57085-e426-4d9c-a545-1099e2145a26"
-      },
-      "source": [
-        "print(type(new_data))"
-      ],
-      "execution_count": 14,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "<class 'list'>\n"
-          ],
-          "name": "stdout"
-        }
-      ]
     },
     {
       "cell_type": "code",
@@ -221,7 +199,7 @@
         "for i in conceptnet_data:\r\n",
         "  processed_data[0]=processed_data[0]+\" \"+str(i)"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -234,7 +212,25 @@
         "for i in range(0,2):\r\n",
         "  new_process.append(processed_data[i])"
       ],
-      "execution_count": 15,
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9-LsNkYoGLCe"
+      },
+      "source": [
+        "def ConceptNet_Sentences(data,labels):\r\n",
+        "  for sentences in range(0,len(data)):\r\n",
+        "    conceptnet_data=[]\r\n",
+        "    cleaned_sentences=data[sentences].translate(str.maketrans('', '', string.punctuation))\r\n",
+        "    tokens_with_sw=nltk.word_tokenize(cleaned_sentences)\r\n",
+        "    tokens= [word for word in tokens_with_sw if not word in stopwords.words()]\r\n",
+        "    for i in tokens:\r\n",
+        "      obj = requests.get('http://api.conceptnet.io/related/c/en/' + i + '?filter=/c/en').json()"
+      ],
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -263,7 +259,7 @@
         "      data[sentences]=data[sentences]+\" \"+str(i)\r\n",
         "  return data"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -278,7 +274,7 @@
       "source": [
         "new_data = add_ConceptNet_Features(new_process)"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -449,7 +445,7 @@
       "source": [
         "print(new_data)"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
