Commented out adding ConceptNet features for adding other algos

--- a/ERC_Using_ALBERT.ipynb
+++ b/ERC_Using_ALBERT.ipynb
@@ -6,7 +6,7 @@
       "name": "ERC_Using_ALBERT.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPA9dT+YVWdbAUI4kgfsv4c",
+      "authorship_tag": "ABX9TyNA/qG5dKT6RNrgrrdv6pga",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -59,7 +59,7 @@
         "import string\r\n",
         "import requests"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -86,7 +86,7 @@
         "!wget --quiet https://raw.githubusercontent.com/tensorflow/models/master/official/nlp/bert/tokenization.py\r\n",
         "!pip install sentencepiece"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -109,7 +109,7 @@
       "source": [
         "import tokenization"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -141,7 +141,7 @@
         "    \r\n",
         "    return np.array(all_tokens), np.array(all_masks), np.array(all_segments)"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -166,7 +166,7 @@
         "    \r\n",
         "    return model"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -183,7 +183,7 @@
         "module_url = \"https://tfhub.dev/tensorflow/albert_en_base/1\"\r\n",
         "albert_layer = hub.KerasLayer(module_url, trainable=True)"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -208,7 +208,7 @@
         "from google.colab import drive\r\n",
         "drive.mount('/content/gdrive')"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -238,7 +238,7 @@
         "with open('/content/gdrive/MyDrive/iemocap/test/conversation_length.pkl', 'rb') as f:\r\n",
         "    test_convlen = pickle.load(f)"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -264,7 +264,7 @@
         "      processed_label.append(j)\r\n",
         "  return processed_data,processed_label"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -276,7 +276,7 @@
         "processed_data,processed_label = preprocessing(data,labels)\r\n",
         "test_processed_data,test_processed_label = preprocessing(test_data,test_labels)"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -290,7 +290,7 @@
         "for i in range(0,len(test_processed_data)):\r\n",
         "  test_processed_data[i]=' '.join(test_processed_data[i])"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -299,8 +299,8 @@
         "id": "vJYPge5shNtA"
       },
       "source": [
-        "processed_data,processed_label=arrange_sentences(train_convlen,processed_data,processed_label)\r\n",
-        "test_processed_data,test_processed_label=arrange_sentences(test_convlen,test_processed_data,test_processed_label)"
+        "# processed_data,processed_label=arrange_sentences(train_convlen,processed_data,processed_label)\r\n",
+        "# test_processed_data,test_processed_label=arrange_sentences(test_convlen,test_processed_data,test_processed_label)"
       ],
       "execution_count": null,
       "outputs": []
@@ -311,12 +311,12 @@
         "id": "wWma5TWja3tL"
       },
       "source": [
-        "with open('/content/processed_data.pkl', 'rb') as f:\r\n",
-        "    processed_data = pickle.load(f)\r\n",
-        "with open('/content/processed_label.pkl', 'rb') as f:\r\n",
-        "    processed_label = pickle.load(f)"
+        "# with open('/content/processed_data.pkl', 'rb') as f:\r\n",
+        "#     processed_data = pickle.load(f)\r\n",
+        "# with open('/content/processed_label.pkl', 'rb') as f:\r\n",
+        "#     processed_label = pickle.load(f)"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -330,7 +330,7 @@
         "Y=to_categorical(processed_label, num_classes=6)\r\n",
         "test_Y=to_categorical(test_processed_label, num_classes=6)"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -342,7 +342,7 @@
         "sp_model_file = albert_layer.resolved_object.sp_model_file.asset_path.numpy()\r\n",
         "tokenizer = tokenization.FullSentencePieceTokenizer(sp_model_file)"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -356,7 +356,7 @@
         "train_labels = Y\r\n",
         "test_labels = test_Y"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -372,7 +372,7 @@
         "model = build_model(albert_layer, max_len=160)\r\n",
         "model.summary()"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -424,7 +424,7 @@
         "\r\n",
         "model.save('model.h5')"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -454,7 +454,7 @@
       "source": [
         "y_pred=model.predict(test_input, batch_size=1)"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
